EPGF-229: Correct a partial surrender on a correction (#550)
* EPGF-229: Correct partial surrenders

Support correcting a partial surrender that is already live on a licence
position, alongside the existing flow for one staged on a position
correction:

- Generalise the task list and review & submit journeys over sealed
  PartialSurrenderTaskListContext / PartialSurrenderSummaryContext
  contexts, with Staged and LiveChange variants.
- Add task list and review & submit routes keyed on the live position
  change, and redirect the staged task list to them when the correction
  targets a live change.
- Replace the per-change-type interceptor rules with a single
  LicencePositionChangeIsOfType rule.
- Support correcting the block surrender type of a live partial
  surrender.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* EPGF-229: Apply full surrender validation to the live change review page

The staged review and submit page blocks submission when every
surrendered block is a full surrender. Apply the same rule when
correcting a partial surrender that is already live on the position, by
splitting the check out into an overload taking the operation itself.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* EPGF-229: Implement review and submit functionality for correcting partial surrenders

* EPGF-229: remove unused method

---------

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>